[gd_scene load_steps=4 format=3 uid="uid://b31nuatkeqsqd"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_c2a4o"]
[ext_resource type="PackedScene" uid="uid://dg2a5feb15vop" path="res://scenes/tchaff.tscn" id="2_61am3"]

[sub_resource type="Curve2D" id="Curve2D_q1pmq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -36, -29, 0, 0, 0, 0, 1941, -34, 0, 0, 0, 0, 1959, 1120, 0, 0, 0, 0, -39, 1127, 0, 0, 0, 0, -36, -29)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_c2a4o")

[node name="tchaff" parent="." instance=ExtResource("2_61am3")]
position = Vector2(308, 283)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPos" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_q1pmq")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-36, -29)
rotation = -0.00252908

[connection signal="hit" from="tchaff" to="." method="_on_tchaff_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
